--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.16.3",
     "jquery": "^3.2.1",
     "path": "^0.12.7",
+    "popper.js": "^1.14.3",
     "rxjs": "^5.5.2",
     "typescript": "~2.4.2",
     "zone.js": "^0.8.14"
